# manus-skills

./: .gitignore  LICENSE  README.md  README_CN.md
pdf-watermark-remover/: README.md  SKILL.md  pyproject.toml
pdf-watermark-remover/pdf_watermark_remover/: __init__.py  cli.py  remover.py
pdf-watermark-remover/tests/: test_remover.py
skills/super-marketing-pro/: SKILL.md
skills/super-marketing-pro/references/: abm_framework.md  content_templates.md  douyin_algorithm.md  funnel_strategy.md  keyword_library.md  linkedin_guide.md  messaging_icp_guide.md  xiaohongshu_tips.md  youtube_seo.md
skills/super-marketing-pro/scripts/: competitor_monitor.py  content_calendar.py  content_repurposer.py  data_reporter.py  email_sequence_generator.py  hashtag_generator.py  llm_utils.py  seo_analyzer.py  strategy_builder.py
